Fix a crash due to reincarnation when two nodes are removed simultaneously

BUG:312867